--- a/_posts/2020-11-24-Ubuntu系统安装、配置及软件教程集合.md
+++ b/_posts/2020-11-24-Ubuntu系统安装、配置及软件教程集合.md
@@ -3,7 +3,7 @@ title: Ubuntu系统安装、配置及软件教程集合
 author: JoyDee
 categories: [操作系统, Linux]
 tags: [Linux]
-math: true
+math: false
 ---
 
 <img src="https://cdn.nlark.com/yuque/0/2020/png/1202844/1606194804719-b70386cf-c6e4-4149-a7ff-d1210dd88788.png"/>
