--- a/_posts/2020-11-25-Linux 概述、常用快捷键、apt命令.md
+++ b/_posts/2020-11-25-Linux 概述、常用快捷键、apt命令.md
@@ -3,7 +3,7 @@ title: Linux 概述、常用快捷键、apt命令
 author: JoyDee
 categories: [操作系统, Linux]
 tags: [Linux]
-math: true
+math: false
 ---
 
 # Chapter 1. Linux 概述
