--- a/_posts/2020-11-25-Linux文件系统、文件基本属性、目录处理及文件查看.md
+++ b/_posts/2020-11-25-Linux文件系统、文件基本属性、目录处理及文件查看.md
@@ -3,7 +3,7 @@ title: Linux文件系统、文件基本属性、目录处理及文件查看
 author: JoyDee
 categories: [操作系统, Linux]
 tags: [Linux]
-math: true
+math: false
 ---
 
 # Chapter 2. 文件系统
