--- a/_posts/2020-11-28-在Ubuntu 20.04配置FTP服务器.md
+++ b/_posts/2020-11-28-在Ubuntu 20.04配置FTP服务器.md
@@ -3,7 +3,7 @@ title: 在Ubuntu 20.04配置FTP服务器
 author: JoyDee
 categories: [操作系统, Linux]
 tags: [Linux]
-math: true
+math: false
 ---
 
 感谢 linuxconfig.org 上的[这篇英文教程](https://linuxconfig.org/how-to-setup-ftp-server-on-ubuntu-20-04-focal-fossa-linux)
