--- a/_posts/2020-09-07-233.md
+++ b/_posts/2020-09-07-233.md
@@ -1,7 +1,7 @@
 ---
 title: 233333
 author: JoyDee
-categories: [Online Judge, CCF_CSP]
+categories: [Online Judge, CCFCSP]
 tags: [C++, 算法]
 math: true
 ---
