--- a/_posts/2020-09-07-CCF-CSP认证-C++题解目录.md
+++ b/_posts/2020-09-07-CCF-CSP认证-C++题解目录.md
@@ -35,6 +35,8 @@ math: true
 | 201509-2 | [日期计算](http://118.190.20.162/view.page?gpid=T31) \| 题解 |                    |
 
 待做
+- [ ] TODO
+- [x] Completed
 - [ ] 201912-4 [区块链](http://118.190.20.162/view.page?gpid=T97)（常用STL、大模拟）
 - [ ] 201903-3  [损坏的RAID5](http://118.190.20.162/view.page?gpid=T87) （进制转换、字符串读取）
 - [ ] 201812-3 [CIDR合并](http://118.190.20.162/view.page?gpid=T82) （`list`）
