--- a/_posts/2020-12-26-汇编语言学习记录02之程序设计技巧.md
+++ b/_posts/2020-12-26-汇编语言学习记录02之程序设计技巧.md
@@ -3,9 +3,13 @@ title: 汇编语言学习记录02之程序设计技巧
 author: JoyDee
 categories: [程序设计语言, 汇编语言]
 tags: [汇编语言]
+math: true
 ---
 
+
+
 ## 位运算技巧在汇编程序中的应用
+咕咕咕~
 
 
 
@@ -15,7 +19,7 @@ tags: [汇编语言]
 
 一、要点：
 
-+ **换码指令—— `XLAT` **：将BX指定的缓冲区中、AL 指定的位移处的一个字节数据取出赋给 AL ，实际相当于 `(AL) = (DS:(BX+AL))` 。注意，不是单纯地赋予 AL+BX ，而是对应**地址**的值。
++ **换码指令—— `XLAT`**：将BX指定的缓冲区中、AL 指定的位移处的一个字节数据取出赋给 AL ，实际相当于 `(AL) = (DS:(BX+AL))` 。注意，不是单纯地赋予 AL+BX ，而是对应**地址**的值。
 
   > 换码指令执行前，一般在主存建立一个**字节量表格**（如下代码4-6行），内含要转换成的目的代码**表格首地址**存放于BX，AL存放相对表格首地址的**位移量**。
   >
@@ -23,7 +27,7 @@ tags: [汇编语言]
 
 二、代码：
 
-```assembly
+```armasm
 assume cs:codesg, ds:datasg
 
 datasg segment
@@ -88,7 +92,7 @@ end start
 
 二、代码：
 
-```assembly
+```armasm
 datasg segment
     str0 db 0dh,0ah,'input number (1-3):',0dH,0ah,'$'
     str1 db 0dh,0ah,'chapter1: introduction',0dH,0ah,'$'
@@ -172,7 +176,7 @@ $$
 
 三、代码
 
-```assembly
+```armasm
 datasg segment
     x dw x1,x2,x3,x4,x5,x6,x7,x8,x9,x10 ;注意，存放的应该是x数组每个元素的值，这里写成x1,x2,...只是占个位
     y dw y1,y2,y3,y4,y5,y6,y7,y8,y9,y10 ;同上理y1,y2,...只是占个位，实际情况是要填上数字的
@@ -211,6 +215,10 @@ restore:
 codesg ends
     end start
 ```
+
+
+
+
 
 
 
