--- a/_posts/2020-12-26-汇编语言学习记录02之程序设计技巧.md
+++ b/_posts/2020-12-26-汇编语言学习记录02之程序设计技巧.md
@@ -8,22 +8,59 @@ math: true
 
 
 
+
+
 ## 位运算技巧在汇编程序中的应用
-咕咕咕~
+
++ 寄存器初始化
+
+  举例使用：
+
+  ```armasm
+  xor ax, ax ;将ax寄存器置零
+  ```
+
++ 判断寄存器是否为0
+
+  假如我们刚刚进行完除法运算，需要判断余数（默认存放在 `DX` 中）是否为0，我们可以对 `DX` 自身按位与，触发标志位影响，举例使用如下：
+
+  ```armasm
+  and dx, dx
+  jz next
+  ```
+
++ 求反的位同 `1` 异或，维持不变的位同 `0` 异或
+
++ 检查某些位是否**同时**为 `1`
+
+  举例：检查 `CX` 中的第1,6和11位中是否同时为`1`
+
+  ```armasm
+  not cx ;先取反，如果所求位是1的话，此时转为0
+  test cx, 0842h ;对其他位置0，对所求位同1按位与
+  jz yes ;如果结果是0，说明所求位都转变成0了，即所求位原来同时为1
+  not cx ;记得取补恢复
+  ```
 
 
 
-## 1位16进制数转换为ASCII码
+## 16进制数转换为ASCII码
 
-### 1. 查表法
+> DOS功能调用的2号功能的输出，需要传入一个ASCII码的字符。然而我们现在只有一个16进制数，如何得到对应的ASCII码呢？
+
+### 方法一：查表法
+
+零、适用范围：
+
+适用于**只有一位**的16进制数（即4位二进制），不适用于两位或两位以上的16进制数。
 
 一、要点：
 
-+ **换码指令—— `XLAT`**：将BX指定的缓冲区中、AL 指定的位移处的一个字节数据取出赋给 AL ，实际相当于 `(AL) = (DS:(BX+AL))` 。注意，不是单纯地赋予 AL+BX ，而是对应**地址**的值。
++ **换码指令—— `XLAT`**：将`BX`指定的缓冲区中、`AL` 指定的位移处的一个字节数据取出赋给 `AL` ，实际相当于 `(AL) = (DS:(BX+AL))` 。注意，不是单纯地赋予 `AL+BX` ，而是对应**地址**的值。
 
-  > 换码指令执行前，一般在主存建立一个**字节量表格**（如下代码4-6行），内含要转换成的目的代码**表格首地址**存放于BX，AL存放相对表格首地址的**位移量**。
+  > 换码指令执行前，一般在主存建立一个**字节量表格**（如下代码4-6行），内含要转换成的目的代码**表格首地址**存放于 `BX`，`AL` 存放相对表格首地址的**位移量**。
   >
-  > 换码指令执行后，将AL**寄存器内容**转换为**目的代码**。
+  > 换码指令执行后，将 `AL` **寄存器内容**转换为**目的代码**。
 
 二、代码：
 
@@ -68,15 +105,74 @@ end start
 | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | 运行结果 | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201126004041.png" width="200"/> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201126004032.png" width="200"/> |
 
-## ASCII码转换为数字
+### 方法二：位运算法
 
-如何将输入得到的 ASCII 码转换为16进制数？
+零、适用范围：
 
-我们观察一下 ASCII 码表，发现$0-9$的ASCII码（二进制8位）下，前8位具有共同前缀 `0011` ，而末8位恰好就是$0-9$的二进制表示！
+适用于多位16进制数，下面演示的是**两位**16进制数（即8位二进制，1个字节大小，可以存放到 8位寄存器 如 `AL`等）
 
-那么，16 进制下的$A-F$呢？共同前缀变成 `0100` 了。
+一、分析：
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201226103818.png"/>
+
+我们观察一下 ASCII 码表，发现$0-9$的ASCII码（二进制8位）下，前8位具有共同前缀 `0011` ，而末8位恰好就是$0-9$的二进制表示！那 16 进制下的$A-F$呢？我们只需要特判即可，如果该数字的ASCII码不超过  `39H` (即数字9)，那么直接输出即可；若超过（说明数字是A-F），那么直接对其**加上 $7$ **即可
+
+由于两位16进制数即是8位二进制数，故我们需要先对高4位二进制数进行转换，再对低4位二进制数进行转换。
+
+二、代码：
+
+```armasm
+datasg segment
+datasg ends
+    
+stacks segment
+    db 256 dup(?)
+stacks ends
+
+codesg segment
+    assume cs:codesg, ds:datasg, ss:stacks
+start:
+    mov ax, datasg
+    mov ds, ax
+    mov al, 0fah; //将你需要转换的两位16进制放到al寄存器中
+
+    push ax     ;暂存ax
+    mov dl, al 
+    mov cl, 4   ;用于shr指令，代表移位4位
+    shr dl, cl  ;dl先取出al的高4位
+    call transASCII
+    pop dx      ;将之前存的ax给pop出来
+    and dl, 0fh ;dl取出取出al的低4位
+    call transASCII
+
+    mov ah, 4ch
+    int 21h
+
+;子程序实现转换
+transASCII proc far
+    or dl, 30h ;对该串的前4位按位或上"0011"（ASCII码中数字的前缀串）
+    cmp dl, 39h ;39H是数字9的ASCII码16进制
+    jbe output ;小于等于39（即数字没超过9），直接输出
+    add dl, 7  ;大于等于39 (即数字为A-F)，需要对ASCII码加上7
+output:
+    mov ah, 2
+    int 21h
+    ret
+transASCII endp
+
+codesg ends
+    end start
+
+
+```
+
+三、运行结果：
+
+| `AL`赋值 |                            `fah`                             |                            `9ch`                             |
+| :------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
+| 运行结果 | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201226144300.png"/> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201226144016.png"/> |
+
+
 
 ## 多分支结构——地址表法
 
@@ -147,15 +243,13 @@ codesg ends
     end start
 ```
 
-
-
 ## 逻辑尺
 
 逻辑尺，其实就是将有限个算式中的**加减**运算符用 `0` 或 `1` 进行区分，由此得到有限长度的 `01` 串。
 
 一、题目
 
-给定数组 $x\ (x_1,x_2,...,x_{10})$ 和 $y\ (y_1,y_2,...,y_{10})$ ，要求计算下面的 $z\ (z_1,z_2,...,z_{10})$
+给定数组 $x\ (x_1,x_2,...,x_{10})$ 和 $y\ (y_1,y_2,...,y_{10})$ ，要求计算下面的 $z\ (z_1,z_2,...,z_{10})$，具体算式如下：
 $$
 \begin{cases}
 z_1 &= x_1  + y_1 \\
@@ -215,6 +309,22 @@ restore:
 codesg ends
     end start
 ```
+
+
+
+## 其他算法
+
++ 阶乘运算（递归实现）
+  《汇编语言程序设计教程》（卜艳萍，清华出版社）P175
+
++ 辗转相除法
+  《汇编语言程序设计教程》（卜艳萍，清华出版社）P165
+
++ 冒泡排序
+  《汇编语言程序设计教程》（卜艳萍，清华出版社）P157
+
+
+
 
 
 
