--- a/_posts/2020-12-30-汇编语言学习记录03.md
+++ b/_posts/2020-12-30-汇编语言学习记录03.md
@@ -12,7 +12,7 @@ math: true
 
 ## 2、实验内容
 
-从键盘输入2 个0–99 之间的整数，对其做乘法运算，在屏幕上显示出该乘积对应的二进制和十六进制数。
+从键盘输入2个 $$0–99$$ 之间的整数，对其做乘法运算，在屏幕上显示出该乘积对应的二进制和十六进制数。
 
 ## 3、实验要求
 
