--- a/_posts/2020-12-26-汇编语言学习记录02之程序设计技巧.md
+++ b/_posts/2020-12-26-汇编语言学习记录02之程序设计技巧.md
@@ -6,7 +6,7 @@ tags: [汇编语言]
 math: true
 ---
 
-
+感谢曹老师的PPT、《汇编语言程序设计教程》（卜艳萍，清华出版社），仔细阅读后，自己提取并总结了这些技巧或方法。文中若有纰漏之处，恳请读者通过邮件向我指正。
 
 ## 位运算技巧在汇编程序中的应用
 
@@ -40,7 +40,18 @@ math: true
   not cx ;记得取补恢复
   ```
 
+## 其他汇编技巧
 
++ 判断某个数（假定存放在 `ax`）是正数，还是零，还是负数
+
+  ```armasm
+  add ax, 0
+  js DON3 ;sf=1, 负数
+  je DON2	;zf=1，零
+  ....
+  ```
+
+  
 
 ## 16进制数转换为ASCII码
 
@@ -48,11 +59,7 @@ math: true
 
 ### 方法一：查表法
 
-零、适用范围：
-
-适用于**只有一位**的16进制数（即4位二进制），不适用于两位或两位以上的16进制数。
-
-一、要点：
+（1）要点：
 
 + **换码指令—— `XLAT`**：将`BX`指定的缓冲区中、`AL` 指定的位移处的一个字节数据取出赋给 `AL` ，实际相当于 `(AL) = (DS:(BX+AL))` 。注意，不是单纯地赋予 `AL+BX` ，而是对应**地址**的值。
 
@@ -60,7 +67,7 @@ math: true
   >
   > 换码指令执行后，将 `AL` **寄存器内容**转换为**目的代码**。
 
-二、代码：
+（2）代码：
 
 ```armasm
 assume cs:codesg, ds:datasg
@@ -93,23 +100,21 @@ end start
 
 ```
 
-三、内存中存储的数据：
+（3）内存中存储的数据：
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201126003946.png" width="400"/>
 
-四、运行结果：
+（4）运行结果：
 
 | hex赋值  | `0fh`                                                        | `09h`                                                        |
 | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | 运行结果 | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201126004041.png" width="200"/> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201126004032.png" width="200"/> |
 
-### 方法二：位运算法
+### 方法二：直接转换法
 
-零、适用范围：
+下面演示的是**两位**16进制数（即8位二进制，1个字节大小，可以存放到 8位寄存器 如 `AL`等）
 
-适用于多位16进制数，下面演示的是**两位**16进制数（即8位二进制，1个字节大小，可以存放到 8位寄存器 如 `AL`等）
-
-一、分析：
+（1）分析：
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201226103818.png"/>
 
@@ -117,7 +122,7 @@ end start
 
 由于两位16进制数即是8位二进制数，故我们需要先对高4位二进制数进行转换，再对低4位二进制数进行转换。
 
-二、代码：
+（2）代码：
 
 ```armasm
 datasg segment
@@ -140,7 +145,7 @@ start:
     shr dl, cl  ;dl先取出al的高4位
     call transASCII
     pop dx      ;将之前存的ax给pop出来
-    and dl, 0fh ;dl取出取出al的低4位
+    and dx, 000fh ;dl取出取出al的低4位
     call transASCII
 
     mov ah, 4ch
@@ -164,7 +169,7 @@ codesg ends
 
 ```
 
-三、运行结果：
+（3）运行结果：
 
 | `AL`赋值 |                            `fah`                             |                            `9ch`                             |
 | :------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
@@ -174,7 +179,7 @@ codesg ends
 
 ## 多分支结构——地址表法
 
-一、要点：
+（1）要点：
 
 + 当程序分支较多时，可使用地址表（跳转表）来实现程序分支。我们在数据段事先安排一个地址表，里面连续存放的是一系列跳转地址，即**各分支程序的入口地址**。
 
@@ -184,7 +189,7 @@ codesg ends
 
 + :star: 因为一个段最大存储空间是 $64$ KB，**偏移地址故使用 16 位表示**。因此需要用 2 个字节存储单元 （1个字）去储存偏移地址。对于这个地址表而言，要两个字节、两个字节…如此去寻找表中的每个元素。（在下面的第32行代码）
 
-二、代码：
+（2）代码：
 
 ```armasm
 datasg segment
@@ -245,30 +250,28 @@ codesg ends
 
 逻辑尺，其实就是将有限个算式中的**加减**运算符用 `0` 或 `1` 进行区分，由此得到有限长度的 `01` 串。
 
-一、题目
+（1）题目
 
 给定数组 $x\ (x_1,x_2,...,x_{10})$ 和 $y\ (y_1,y_2,...,y_{10})$ ，要求计算下面的 $z\ (z_1,z_2,...,z_{10})$，具体算式如下：
-
 $$
 \begin{cases}
-    z_1 &= x_1  + y_1 \\
-    z_2 &= x_2  + y_2 \\
-    z_3 &= x_3  - y_3 \\
-    z_4 &= x_4  - y_4 \\
-    z_5 &= x_5  - y_5 \\
-    z_6 &= x_6  + y_6 \\
-    z_7 &= x_7  - y_7 \\
-    z_8 &= x_8  - y_8 \\
-    z_9 &= x_9  + y_9 \\
-    z_{10}&= x_{10} + y_{10} \\
+z_1 &= x_1  + y_1 \\
+z_2 &= x_2  + y_2 \\
+z_3 &= x_3  - y_3 \\
+z_4 &= x_4  - y_4 \\
+z_5 &= x_5  - y_5 \\
+z_6 &= x_6  + y_6 \\
+z_7 &= x_7  - y_7 \\
+z_8 &= x_8  - y_8 \\
+z_9 &= x_9  + y_9 \\
+z_{10}&= x_{10} + y_{10} \\
 \end{cases}
 $$
-
-二、分析
+（2）分析
 
 注意只有$10$项，每一项的$z_i(1\leq i\leq 10)$都是由 $x_i$ 与 $y_i$ 进行加或减的运算，我们用 `1` 表示减法、`0` 表示加法，因此，从第一条式（在低位）到第10条式（在高位）的加减符号便能够得到一条 `01` 串：`0000,0000,1101,1100b`（16进制为 `00dch`），接着我们只需要循环依次遍历 $z_i$ 便能够得出结果了。
 
-三、代码
+（3）代码
 
 ```armasm
 datasg segment
@@ -310,25 +313,19 @@ codesg ends
     end start
 ```
 
-
-
 ## 其他算法
 
 + 阶乘运算（递归实现）
+
   《汇编语言程序设计教程》（卜艳萍，清华出版社）P175
 
 + 辗转相除法
+
   《汇编语言程序设计教程》（卜艳萍，清华出版社）P165
 
 + 冒泡排序
+
   《汇编语言程序设计教程》（卜艳萍，清华出版社）P157
-
-
-
-
-
-
-
 
 
 
