--- a/_posts/2020-12-30-汇编语言学习记录03.md
+++ b/_posts/2020-12-30-汇编语言学习记录03.md
@@ -1,10 +1,12 @@
 ---
-title: 汇编语言学习记录03之数值运算与数据输出作业
+title: 汇编语言学习记录03之数值运算与数据输出
 author: JoyDee
 categories: [程序设计语言, 汇编语言]
 tags: [汇编语言]
 math: true
 ---
+
+本篇文章，是我们大二的汇编语言实验课的考核作业，在此记录下我的三百行代码吧hhh
 
 ## 1、实验目的
 
