--- a/_posts/2021-01-05-电基.md
+++ b/_posts/2021-01-05-电基.md
@@ -69,7 +69,7 @@ math: true
 
   |              | 共射放大电路                                                 | 共集电极放大电路                                             | 共基极放大电路                                               |
   | ------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-  | 电路图       | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210105004700.png"/> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210105004439.png"/> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210105003847.png"/> |
+  | 电路图       | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210105004700.png" width="250"/> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210105004439.png" width="250"/> | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210105003847.png" /> |
   | 电压放大倍数 | 较大，输出信号电压与输入信号电压**相反**。                   | 恒小于1，而接近1，输出电压与输入电压同相                     | 较大，输出电压与输入电压同相                                 |
   | 电流放大倍数 | 较大                                                         | 较大                                                         | 小于1，不能放大电流                                          |
   | 输入电阻     | 适中                                                         | 较大                                                         | 小                                                           |
@@ -94,4 +94,5 @@ math: true
 
   + 引入**电流**负反馈，输出电阻增大为无负反馈的$1+\dot{A} \dot{F}$ 倍。
   + 引入**电压**负反馈，输出电阻减小为无负反馈的$1/(1+\dot{A} \dot{F})$倍。
+
 
