--- a/_posts/2021-01-06-毛中特复习.md
+++ b/_posts/2021-01-06-毛中特复习.md
@@ -52,7 +52,7 @@ math: true
 
 ![image-20210106164437425](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210106164437425.png)
 
-
+新民主主义革命理论、改造理论、探索理论
 
 ## 毛泽东思想活的灵魂 :star:
 
@@ -109,7 +109,7 @@ math: true
 
 《在晋绥干部会议上的讲话》完整表述总路线内容：
 
-无产阶级（谁领导？）、人民大众的（革命动力），反对**帝国主义**、封建主义（经济现代化、政治民主化的主要障碍）和官僚资本主义的革命（革命对象）
+:star: 无产阶级（谁领导？）、人民大众的（革命动力），反对**帝国主义**、封建主义（经济现代化、政治民主化的主要障碍）和官僚资本主义的革命（革命对象）
 
 其中，新民主主义革命的动力——人民大众，包括工、农、小资、民资
 
@@ -189,7 +189,158 @@ math: true
 
   ![image-20210106223101417](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210106223101417.png)
 
+  ![image-20210107094553597](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107094553597.png)
+
 + 武装斗争
+
+  > 我国的军队是人民的，而党对军队的绝对领导
+
+  ![image-20210107095026547](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107095026547.png)
 
 + 党的建设
 
+  中国共产党要领导革命取得胜利，必须不断加强党的**三个方面**建设：**思想建设**、组织建设、作风建设（毛）
+
+  > 习——党的六大建设：**政治**、思想、组织、纪律、作风、制度
+
+  党的三大优良作风：理论联系实际、密切联系群众、批评与自我批评
+
+  ![image-20210107095510844](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107095026547.png)
+
+# Chap3
+
+## 新民主主义社会性质和特点
+
+1949（国成立）-1956（改造完毕）
+
+国情：新民主主义社会（49前半殖民半封建）
+
+五种经济成分：
+
+右两种为过渡经济（临时），主要为左三种
+
+![image-20210107100244504](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107100244504.png)
+
+三种阶级构成：工人阶级、农民阶级和其他小资产阶级、民族资产阶级
+
+三经济成分 与 三种阶级力量 矛盾表现——资本主义和社会主义的道路、资产阶级和工人阶级阶级
+
+新时期，民族资产阶级仍有两面性——剥削工人 和 接受工人阶级及其政党领导
+
+社会主义因素（公有），居领导（主体地位是**错误**说法）；非社会主义因素（个人、非公），仍有大比重
+
+> 在如今，公有 已成为 主体
+
+新民主主义社会，属于社会主义体系，逐步过渡到社会主义社会的过渡社会
+
+>  新民主主义革命，性质为资产阶级的革命，由于处于无产阶级的时代，因而属于无产阶级革命的一部分
+
+## 党在过渡时期的总路线
+
+“一化三改”，“一化”即社会主义工业化，“三改”即对个体农业、手工业和对资本主义工商业的社会主义改造
+
+> 49年以前，请翻阅上面笔记。
+>
+> 今天总路线，一个中心两个基本点。
+
+## 适合中国特点的社会主义改造道路
+
+三大改造走合作化的道路
+
+> 49年，走的是 农村包围城市、武装夺取政权
+>
+> 今天，走的是 中国特色社会主义道路
+
+农业的社会主义改造：
+
+![image-20210107104617755](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107095510844.png)
+
+> 互助组：社会主义萌芽；初级农业生产合作社：半社会主义；高级农业生产合作社：完全社会主义
+
+手工业社会主义改造：(注意道路)
+
+![image-20210107105121339](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107105121339.png)
+
+> 供销小组：萌芽；手工业供销合作社：半社会；手工业生产合作社：完全社会主义
+
+资本主义工商业的社会主义改造：
+
+> 注意，和平赎买不是形式，形式是**国家资本主义**
+
+![image-202101071100](https://gitee.com/j__strawhat/MyImages/raw/master/image-202101071100.png)
+
+![](C:\Users\luffy\OneDrive - PursuitMyDreams\博客文章\2021-01-06-毛中特复习.assets\image-2021010712.png)
+
+## 社会主义改造的历史经验 :star:
+
+1. 坚持社会主义工业化建设与社会主义改造同时并举
+
+   > 一化三改，注意，是边化，边改
+
+2. 采取积极引导、逐步过渡的方式
+
+3. 用和平方法进行改造
+
+## 确立社会主义基本制度的重大意义 :star: (徐涛06)
+
+1. 极大地提高了工人阶级和广大劳动人民的积极性和创造性，极大地促进了我国社会生产力的发展。
+2. 使广大**劳动**人民真正成为国家的主人
+3. 使占世界人口四分之一的东方大国进入了社会主义，是世界社会主义发展史上又一个历史性的伟大胜利。
+4. 再次证明了马克思主义的真理性，而且有自己的独创，丰富和发展了马克思主义。
+
+# Chap4
+
+1956-1976 
+
+> 下面的小标题，需要记住
+
+## 社会主义建设道路初步探索的重要思想成果
+
+### 调动一切积极因素为社会主义事业服务的思想
+
+《论十大关系》，标志马克思主义与中国实际的第二次结合的**开始**
+
+探索原则：以苏为鉴，独立自主地探索适合中国情况的社会主义建设道路
+
+基本方针：努力地把 ….  调动起来
+
+### 正确认识和处理社会主义社会矛盾的思想
+
+《关于正确处理人民内部矛盾的问题》，社会主义社会同样充满着矛盾
+
+![image-20210107132533297](C:\Users\luffy\OneDrive - PursuitMyDreams\博客文章\2021-01-06-毛中特复习.assets\image-20210107132533297.png)
+
+![image-20210107132748963](C:\Users\luffy\OneDrive - PursuitMyDreams\博客文章\2021-01-06-毛中特复习.assets\image-20210107132748963.png)
+
+![image-20210107133031433](C:\Users\luffy\OneDrive - PursuitMyDreams\博客文章\2021-01-06-毛中特复习.assets\image-20210107133031433.png)
+
+![image-20210107133051994](C:\Users\luffy\OneDrive - PursuitMyDreams\博客文章\2021-01-06-毛中特复习.assets\image-20210107133051994.png)
+
+![image-20210107133355163](C:\Users\luffy\OneDrive - PursuitMyDreams\博客文章\2021-01-06-毛中特复习.assets\image-20210107133355163.png)
+
+![image-20210107133409827](C:\Users\luffy\OneDrive - PursuitMyDreams\博客文章\2021-01-06-毛中特复习.assets\image-20210107133409827.png)
+
+![image-20210107133505446](C:\Users\luffy\OneDrive - PursuitMyDreams\博客文章\2021-01-06-毛中特复习.assets\image-20210107133505446.png)
+
+### 走中国工业化道路的思想
+
+中国工业化道路的问题，主要指重工业、轻工业和农业发展关系问题
+
+### 初步探索的其他理论成果
+
+
+
+## 社会主义建设道路初步探索的意义 :star:
+
+1. 巩固和发展了我国的社会主义制度
+2. 为开创中国特色社会主义提供了宝贵经验、理论准备、物质基础
+3. 丰富了科学社会主义的理论和实践
+
+## 社会主义建设道路初步探索的经验教训 :star:
+
+1. 必须把马克思主义与中国实际相结合，探索符合中国特点的社会主义建设道路；
+2. 必须正确认识社会主义社会的主要矛盾和根本任务，集中力量发展生产力；
+3. 必须从实际出发进行社会主义建设，建设规模和速度要和国力相适应，不能急于求成；
+4. 必须发展社会主义民主，健全社会主义法则；
+5. 必须坚持党的民主集中制和集体领导制度，加强执政党建设；
+6. 必须坚持对外开放，不能关起门来搞建设，要借鉴和吸收人类文明的共同成果建设社会主义。
