--- a/_posts/2021-01-06-毛中特复习.md
+++ b/_posts/2021-01-06-毛中特复习.md
@@ -6,29 +6,22 @@ tags: [人文]
 math: true
 ---
 
-## Chap1
-
-
-
-### 马克思主义中国化的内涵
+# Chap1
+## 马克思主义中国化的内涵
 
 必要性：
-
 1. 中国需要
 2. 理论需要
 
 可能性：
-
 1. 中国需要都成立
 2. 理论需要都成立
 3. 相融性（马+中国传统文化）
 
-### 马克思主义中国化的历史进程
+## 马克思主义中国化的历史进程
 
 一、毛泽东思想
-
 1. 毛泽东：党的六届六中全会、《论新阶段》、提出命题
-
 2. 延安整风，全党共识
 3. 党的七大正式
 
@@ -38,7 +31,7 @@ math: true
 
 
 
-### 毛泽东思想形成发展的历史条件
+## 毛泽东思想形成发展的历史条件
 
 1. 时代背景：19ed 20st，帝国主义和无产阶级革命时代（或总称革命与战争）
 
@@ -46,17 +39,17 @@ math: true
 
 2. 实践基础
 
-毛泽东思想有革命、有建设（中特只有建设）
+    毛泽东思想有革命、有建设（中特只有建设）
 
 
 
-### 毛泽东思想形成发展的过程（步骤）
+## 毛泽东思想形成发展的过程（步骤）
 
 ![image-20210106164437425](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210106164437425.png)
 
 新民主主义革命理论、改造理论、探索理论
 
-### 毛泽东思想活的灵魂 :star:
+## 毛泽东思想活的灵魂 :star:
 
 1. 提出：党的十一届六中全会，《历史决议》
 
@@ -72,7 +65,7 @@ math: true
 
      坚持中国的事情必须由中国人民自己处理
 
-### 毛泽东思想的历史地位 :star:
+## 毛泽东思想的历史地位 :star:
 
 1. 马克思主义中国化的第一个**重大理论成果**
 2. 中国革命和建设的**科学指南**
@@ -82,9 +75,9 @@ math: true
 
 毛泽东思想都是正确的（区分“毛泽东**的**思想”）
 
-## Chap2
+# Chap2
 
-### 近代中国国情和中国革命的时代特征
+## 近代中国国情和中国革命的时代特征
 
 + 国情：半殖民半封建（中国经济、政治、文化发展极不平衡）
 
@@ -100,12 +93,12 @@ math: true
   >
   > 右倾，二次革命论，反帝、封后，再插资产阶级专政，再反资，夸大前两者和后者的区别
 
-### 新民主主义革命理论的实践基础
+## 新民主主义革命理论的实践基础
 
 + 旧民主革 失败
 + 新民主革命 本身实践需要 + 中国革命经验教训
 
-### 新民主主义革命理论总路线
+## 新民主主义革命理论总路线
 
 《中国革命和中国共产党》，第一次 新民革命的科学概念
 
@@ -135,7 +128,7 @@ math: true
 
 ![image-20210106210122803](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210106210122803.png)
 
-### 新民主主义革命的基本纲领
+## 新民主主义革命的基本纲领
 
 1940，毛《新民主主义论》（只阐述新民 政、经、文）；
 
@@ -157,7 +150,7 @@ math: true
 
 新民主主义文化：民族的科学的大众的文化
 
-### 新民主主义革命的总道路
+## 新民主主义革命的总道路
 
 土地革命早期——《中国的红色政权为什么存在》《井冈山的斗争》《星星之火》，提出“**工农武装割据**”的思想，初步形成农村包围城市革命道路理论（也意味着毛思想的初步形成的标志）
 
@@ -181,7 +174,7 @@ math: true
 + 农村革命根据地 是 中国革命的战略阵地，是进行武装斗争和开展土地革命的**依托**。
 + 在党的领导下，实现了土地革命、武装斗争、农村革命根据地建设三者的密切结合和有机统一
 
-### 新民主主义革命的三大法宝 （总经验）:star:
+## 新民主主义革命的三大法宝 （总经验）:star:
 
 毛《共产党人发刊词》
 
@@ -209,9 +202,9 @@ math: true
 
   ![image-20210107095510844](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107095026547.png)
 
-## Chap3
+# Chap3
 
-### 新民主主义社会性质和特点
+## 新民主主义社会性质和特点
 
 1949（国成立）-1956（改造完毕）
 
@@ -237,7 +230,7 @@ math: true
 
 >  新民主主义革命，性质为资产阶级的革命，由于处于无产阶级的时代，因而属于无产阶级革命的一部分
 
-### 党在过渡时期的总路线
+## 党在过渡时期的总路线
 
 “一化三改”，“一化”即社会主义工业化，“三改”即对个体农业、手工业和对资本主义工商业的社会主义改造
 
@@ -245,7 +238,7 @@ math: true
 >
 > 今天总路线，一个中心两个基本点。
 
-### 适合中国特点的社会主义改造道路
+## 适合中国特点的社会主义改造道路
 
 三大改造走合作化的道路
 
@@ -273,7 +266,7 @@ math: true
 
 ![](C:\Users\luffy\OneDrive - PursuitMyDreams\博客文章\2021-01-06-毛中特复习.assets\image-202101071232323.png)
 
-### 社会主义改造的历史经验 :star:
+## 社会主义改造的历史经验 :star:
 
 1. 坚持社会主义工业化建设与社会主义改造同时并举
 
@@ -283,22 +276,22 @@ math: true
 
 3. 用和平方法进行改造
 
-### 确立社会主义基本制度的重大意义 :star: (徐涛06)
+## 确立社会主义基本制度的重大意义 :star: (徐涛06)
 
 1. 极大地提高了工人阶级和广大劳动人民的积极性和创造性，极大地促进了我国社会生产力的发展。
 2. 使广大**劳动**人民真正成为国家的主人
 3. 使占世界人口四分之一的东方大国进入了社会主义，是世界社会主义发展史上又一个历史性的伟大胜利。
 4. 再次证明了马克思主义的真理性，而且有自己的独创，丰富和发展了马克思主义。
 
-## Chap4
+# Chap4
 
 1956-1976 
 
 > 下面的小标题，需要记住
 
-### 社会主义建设道路初步探索的重要思想成果
+## 社会主义建设道路初步探索的重要思想成果
 
-#### 调动一切积极因素为社会主义事业服务的思想
+## 调动一切积极因素为社会主义事业服务的思想
 
 《论十大关系》，标志马克思主义与中国实际的第二次结合的**开始**
 
@@ -306,7 +299,7 @@ math: true
 
 基本方针：努力地把 ….  调动起来
 
-#### 正确认识和处理社会主义社会矛盾的思想
+## 正确认识和处理社会主义社会矛盾的思想
 
 《关于正确处理人民内部矛盾的问题》，社会主义社会同样充满着矛盾
 
@@ -324,21 +317,21 @@ math: true
 
 ![image-20210107133505446](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107133505446.png)
 
-#### 走中国工业化道路的思想
+## 走中国工业化道路的思想
 
 中国工业化道路的问题，主要指重工业、轻工业和农业发展关系问题
 
-#### 初步探索的其他理论成果
+## 初步探索的其他理论成果
 
 
 
-### 社会主义建设道路初步探索的意义 :star:
+## 社会主义建设道路初步探索的意义 :star:
 
 1. 巩固和发展了我国的社会主义制度
 2. 为开创中国特色社会主义提供了宝贵经验、理论准备、物质基础
 3. 丰富了科学社会主义的理论和实践
 
-### 社会主义建设道路初步探索的经验教训 :star:
+## 社会主义建设道路初步探索的经验教训 :star:
 
 1. 必须把马克思主义与中国实际**相结合**，探索符合中国特点的社会主义建设道路；
 
@@ -360,9 +353,9 @@ math: true
 
 6. 必须坚持对外开放，不能关起门来搞建设，要借鉴和吸收人类文明的共同成果建设社会主义。
 
-## Chap5
+# Chap5
 
-### 邓小平理论的形成条件
+## 邓小平理论的形成条件
 
 > 习指出：邓小平留下的遗产，一是中特社主义，二是邓小平理论
 
@@ -378,7 +371,7 @@ math: true
 
 3. 现实依据：改革开放和现代化建设的实践
 
-### 邓小平理论的形成过程（步骤）
+## 邓小平理论的形成过程（步骤）
 
 1. 党的11.3全会，重新确立 **解放思想、实事求是** 的思想路线
 
@@ -396,7 +389,7 @@ math: true
    >
    > 习，十九大
 
-### 邓小平理论回答的基本问题
+## 邓小平理论回答的基本问题
 
 什么是社会主义、怎样建设社会主义
 
@@ -414,9 +407,9 @@ math: true
 
 > 现在是收入差距过大，需要“分好蛋糕”
 
-### 邓小平理论的主要内容
+## 邓小平理论的主要内容
 
-#### 一、解放思想、实事求是的**思想路线**
+## 一、解放思想、实事求是的**思想路线**
 
 其中，思想路线：
 
@@ -432,7 +425,7 @@ math: true
 
 该思想路线，是邓论的**活的灵魂**，邓论的**精髓**。
 
-#### 二、社会主义初级阶段理论（国情论）
+## 二、社会主义初级阶段理论（国情论）
 
 13大前夕，邓的论述，将“社初”作为事关全局的国情加以把握
 
@@ -451,7 +444,7 @@ math: true
 1. 我国已经进入社会主义社会，必须坚持而不能离开社会主义（定性）
 2. 我国的社会主义社会还处在不发达的阶段，必须正视而不能超越初级阶段（定量）
 
-#### 三、党的基本路线
+## 三、党的基本路线
 
 + 奋斗目标：富强、民主、文明….
 
@@ -475,19 +468,19 @@ math: true
 
 社会主义初级阶段基本路线的意义（重要性）——是党和国家的生命线，人民的幸福线
 
-#### 四、社会主义根本任务的理论
+## 四、社会主义根本任务的理论
 
  生产力是社会发展的最根本的决定性因素，社会主体的根本任务是解放生产力，发展生产力
 
 > 中特新时代总任务，一是中华民族伟大复兴，二是社会主义现代化
 
-#### 五、“三步走”战略（大三步）
+## 五、“三步走”战略（大三步）
 
 ![image-20210107161240105](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107161240105.png)
 
 > 在今天（19大），2035年就要基本实现现代化；21中叶，实现现代化强国
 
-#### 六、改革开放理论
+## 六、改革开放理论
 
 性质
 
@@ -505,7 +498,7 @@ math: true
 
 改革开放——活力源泉、重要法宝
 
-#### 七、社会主义市场经济理论
+## 七、社会主义市场经济理论
 
 我国经济体制改革的**核心**：如何正确认识和处理计划与市场的关系（或政府和市场的关系）
 
@@ -527,35 +520,35 @@ math: true
 
 计划和市场都是经济手段，是体制
 
-#### 八、“两手抓，两手都要硬”
+## 八、“两手抓，两手都要硬”
 
-#### 九、“一国两制”
+## 九、“一国两制”
 
 它的提出，从解决台湾问题开始的。但它在实践中首先运用于解决香港、澳门问题
 
 台湾问题是国内战争遗留下来，属于中国内政
 
-#### 十、中国问题的关键在于党
+## 十、中国问题的关键在于党
 
 
 
-### 邓小平理论的历史地位
+## 邓小平理论的历史地位
 
 1. 马列毛的继承和发展
 2. 中特社理论体系的开篇之作
 3. 改革开放和社会主义现代化建设的科学指南
 
-## Chap 6-7
+# Chap 6-7
 
 “三个代表”重要思想的形成条件：冷战结束后国际局势、判断党的历史方位和总结历史经验、建设中特社伟大实践
 
 科学发展观的形成条件（21世纪初）：新的阶段性特征上形成和发展的、党的十六大以来实践经验的基础上形成和发展的、国际形势世界趋势
 
-### “三个代表”重要思想的核心观点
+## “三个代表”重要思想的核心观点
 
 中国共产党必须始终代表中国先进生产力的发展要求，始终代表中国先进文化的前进方向，始终代表中国最广大人民的根本利益，这是对“三个代表”重要思想的集中概括。
 
-### “三个代表”重要思想的主要内容
+## “三个代表”重要思想的主要内容
 
 发展是党执政兴国的第一要务
 
@@ -563,11 +556,11 @@ math: true
 
 1. 所有制：…. 个体、私营等各种形式的非公有制经济是社会主义**市场**经济的重要组成部分，对充分调动社会各方面的积极性、加快生产力发展具有重要作用
 
-   [附]：中特思维
+    [附]：中特思维
 
-   ![ image-20210107203326601](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107203326601.png)
+    ![ image-20210107203326601](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107203326601.png)
 
-![image-20210107203724995](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107203724995.png)
+    ![image-20210107203724995](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107203724995.png)
 
 二、建立社会主义市场经济体制
 
@@ -599,22 +592,22 @@ math: true
 
 五、推进党的建设新的伟大工程
 
-### “三大代表”重要思想的历史地位 :star:
+## “三大代表”重要思想的历史地位 :star:
 
 1. 中国特色社会主义理论体系的**接续发展**
 2. 加强和改进党的建设，推进中国特色社会主义事业的**强大理论武器**
 
 总之，“三个代表”重要思想进一步回答了什么是社会主义、怎样建设社会主义的问题，创造性地回答了建设什么样的党、怎样建设党的问题，集中起来就是深化了对中国特色社会主义发展规律的认识。“三个代表”重要思想是加强和改进党的建设、推进我国社会主义自我完善和发展的强大理论武器，是党和国家必须长期坚持的指导思想。
 
-### 科学发展观的科学内涵 :star:
+## 科学发展观的科学内涵 :star:
 
 科学发展观，第一要义是发展，核心立场是以人为本，基本要求是全面协调可持续，根本方法是统筹兼顾。
 
-### 科学发展观的主要内容
+## 科学发展观的主要内容
 
 ![image-20210107210355507](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107210355507.png)
 
-### 科学发展观的重要意义（历史地位）:star:
+## 科学发展观的重要意义（历史地位）:star:
 
 1. 中国特色社会主义理论体系的接续发展
 2. 发展中国特色社会主义必须长期坚持的指导思想
