--- a/_posts/2021-01-06-毛中特复习.md
+++ b/_posts/2021-01-06-毛中特复习.md
@@ -6,14 +6,26 @@ tags: [人文]
 math: true
 ---
 
+---
+title: 毛中特复习
+author: JoyDee
+categories: [人文素养, 马克思主义]
+tags: [人文]
+math: true
+
+---
+
 # Chap1
+
 ## 马克思主义中国化的内涵
 
 必要性：
+
 1. 中国需要
 2. 理论需要
 
 可能性：
+
 1. 中国需要都成立
 2. 理论需要都成立
 3. 相融性（马+中国传统文化）
@@ -21,6 +33,7 @@ math: true
 ## 马克思主义中国化的历史进程
 
 一、毛泽东思想
+
 1. 毛泽东：党的六届六中全会、《论新阶段》、提出命题
 2. 延安整风，全党共识
 3. 党的七大正式
@@ -39,7 +52,7 @@ math: true
 
 2. 实践基础
 
-    毛泽东思想有革命、有建设（中特只有建设）
+   毛泽东思想有革命、有建设（中特只有建设）
 
 
 
@@ -556,11 +569,11 @@ math: true
 
 1. 所有制：…. 个体、私营等各种形式的非公有制经济是社会主义**市场**经济的重要组成部分，对充分调动社会各方面的积极性、加快生产力发展具有重要作用
 
-    [附]：中特思维
+   [附]：中特思维
 
-    ![ image-20210107203326601](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107203326601.png)
+   ![ image-20210107203326601](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107203326601.png)
 
-    ![image-20210107203724995](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107203724995.png)
+   ![image-20210107203724995](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107203724995.png)
 
 二、建立社会主义市场经济体制
 
@@ -611,3 +624,337 @@ math: true
 
 1. 中国特色社会主义理论体系的接续发展
 2. 发展中国特色社会主义必须长期坚持的指导思想
+
+# Chap8
+
+## 新时代的内涵 :star:
+
+> 这是我国发展新的历史方位，但不是历史阶段（仍是社初阶段）。
+
+第一是承前启后、继往开来，在新的历史条件下继续夺取中国特色社会主义伟大胜利的时代。
+
+第二是决胜全面建成小康社会、进而全面建设社会主义现代化强国的
+时代。
+
+第三是全国各族人民团结奋斗、不断创造美好生活、逐步实现全体人民共同富裕的时
+代。
+
+第四是全体中华儿女勠力同心、奋力实现中华民族伟大复兴中国梦的时代。
+
+第五是我国
+日益走近世界舞台中央、不断为人类作出更大贡献的时代。
+
+## 新时代的意义 :star:
+
+1. 意味着迎来了实现**中华民族伟大复兴**的光明前景；
+
+   > 1949年“站起来”，改革开放“富起来”
+
+2. 意味着**科学社会主义**在 21 世纪的中国焕发出强大生机活力，在世界上高高举起了中国特色社会主义伟大旗帜；
+
+3. (**人类文明进程**)意味着为
+   解决人类问题贡献了中国智慧和中国方案。
+
+## 社会主要矛盾的变化及其依据
+
+> 主要围绕于社会主义初级阶段主要矛盾
+>
+> 1956年 八大 毛
+>
+> 1981年 十一届六中全会 邓
+>
+> 2017 十九大 习
+
+党的十九大明确指出，我国社会主要矛盾已经转化为人民日益增长的美好生活需要和不
+平衡不充分的发展之间的矛盾。
+
+主要把握三个变与两个不变：
+
+一、是我国进入社会主义初级阶段以来的“落后的社会生产”已经发生了新的阶段性变化。
+
+二、是人民群众对于日益增长的“物质文化需要”层次更高、内容范围更广，出现了阶段性的
+新特征。
+
+三、是影响满足人们美好生活需要的因素很多，但主要是发展的不平衡不充分问题。
+
+我国社会主要矛盾的变化，没有改变我们对我国社会主义所处**历史阶段**的判断，我国仍处于
+并将长期处于社会主义初级阶段的**基本国情**没有变，我国是世界最大发展中国家的**国际地位**
+没有变。（*但不代表我国在社会上发挥的作用没有变*）
+
+## 习近平新时代中国特色社会主义思想的主要内容 :star:
+
+**坚持和发展**中国特色社会主义，是改革开放以来我们党全部理论和实践的鲜明主题，也是习近平新时代中国特色社会主义思想的**核心要义**。
+
+习近平新时代中国特色社会主义思想内涵十分丰富，涵盖了经济、政治、文化、社会、生态文明、国防和军队、外交、党的建设等
+各方面。其中最重要、最核心的内容就是党的十九大报告概括的“**八个明确**”，明确了新时代坚持和发展什么样的中国特色社会主义；党的十九大概括的“**十四个坚持**”，即新时代中
+国特色社会主义基本方略，回答了新时代怎样坚持和发展中国特色社会主义问题。
+
+“**八个明确**”是**指导思想**层面的表述，重点讲的是怎么看，回答的是新时代坚持和发展什么样的中国
+特色社会主义的问题；
+
+“**十四个坚持**”是**行动纲领**层面的表述，重点讲的是怎么办，回答的
+是新时代怎样坚持和发展中国特色社会主义的问题。
+
+“八个明确”和“十四个坚持”体现了
+习近平新时代中国特色社会主义思想理论与实践的统一。
+
+## “八个明确”
+
+![image-20210108094957937](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108094957937.png)
+
+![image-20210108095021567](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108095021567.png)
+
+![image-20210108095119953](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108095119953.png)
+
+## “十四个坚持”
+
+![image-20210108095303478](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108095303478.png)
+
+> 重要保障，依法治国。根本保障，党的领导。战略支撑，军队国防
+
+![image-20210108095510711](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108095510711.png)
+
+![image-20210108095549684](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108095549684.png)
+
+## 习近平新时代中国特色社会主义思想的重要意义
+
+1. 马克思主义中国化最新成果
+
+2. 新时代的精神旗帜
+
+3. 实现中华民族伟大复兴的**行动指南**
+
+   是根本指引、基本遵循、思想武器
+
+# Chap9
+
+## 实现中华民族伟大复兴的中国梦
+
+坚持和发展中国特色社会主义的总任务，是实现社会主义现代化和中华民族伟大复兴，在….，分两步走…中国梦是中华民族伟大复兴的形象表达
+
+> （邓论）社会主义根本任务，解放和发展生产力
+
+### 中国梦的科学内涵
+
+中国梦的**本质**是国家富强、民族振兴、人民幸福
+
+国家富强、民族振兴，是人民幸福的基础和保障
+
+人民幸福，是国家富强、民族振兴的题中之义和必然要求，根本出发点和落脚点
+
+### 中国梦的实现 :star:
+
+1. 实现中国梦必须走中国道路，这就是中国特色社会主义道路。
+2. 实现中国梦必须弘扬中国精神，这就是以爱国主义为核心的民族精神和以改革创新为核心的时代精神。
+3. 实现中国梦必须凝聚中国力量，这就是全国各族人民大团结的力量
+
+## 建成社会主义现代化强国的战略安排（新两步）
+
+> “大三步”：1980-1990、1990-2000、2000-2050（10）
+>
+> “小三步”：2000-2010、2010-2020、2020-2050（10）
+>
+> “新两步”：讨论2020-21中叶（15）
+
+十九大报告在综合分析国际国内形势和我国发展条件的基础上，提出要全面建成小康社会、**实现第一个百年奋斗目标**，然后再乘势而上，开启开面建设社会主义现代化国家新征程，
+**向第二个百年奋斗目标进军**。
+
+全面建设社会主义现代化国家的进程分**两个阶段**来安排：
+
+第一个阶段，是从2020 年到
+2035 年，在全面建成小康社会的基础上，再奋斗15 年，**基本**实现社会主义现代化；
+
+> 当年邓论，21中叶实现社会主义现代化
+
+> 经济：创新型国家**前列**、经济发展向质量效益提升的根本转变；民生和社会建设：进入高收入国家**行列**；生态文明：根本好转
+
+第二个
+阶段是从2035 年到本世纪中叶，在基本实现现代化的基础上，再奋斗15 年，把我国**建成**富强民主文明和谐美丽的社会主义现代化强国。
+
+> 民生与社会建设：全体人民**共同富裕**基本实现
+
+从全面建成小康社会到基本实现现代化，再到全面建设社会主义现代化强国，是新时代中国特色社会主义发展的战略安排。这一战略安排，是在综合分析国际国内形势和我国发展
+条件之后作出的重大决策；也是我们党适应我国发展实际作出的必然选择，对动员全党全国
+各族人民万众一心实现中华民族伟大复兴的中国梦具有重大意义。十九大提出全面建设社会
+主义现代化国家的进程分两个阶段来安排：第一个阶段是从2020 年到2035 年，在全面建成
+小康社会的基础上，再奋斗15 年，基本实现社会主义现代化；第二个阶段是从2035 年到本
+世纪中叶，在基本实现现代化的基础上，再奋斗15 年，把我国建成富强民主文明和谐美丽
+的社会主义现代化强国。这一战略安排，是在综合分析国际国内形势和我国发展条件之后作
+出的重大决策；也是我们党适应我国发展实际作出的必然选择，对动员全党全国各族人民万众一心实现中华民族伟大复兴的中国梦具有重大意义。
+
+# Chap10
+
+“五位一体”总体布局中，经济、政治最重要
+
+## 经济板块
+
+### 1.贯彻新发展理念
+
+#### 是什么？:star:
+
+**创新**、协调、绿色、开放、共享的发展理念，相互贯通、相互促进，是具有内在联系的集合体。创新注重的是解决发展动力问题，协调注重的是解决发展不平衡问题，绿色注重的是解决人与自然和谐问题，开放注重的是解决发展内外联动问题，共享注重的是解决社会公平正义问题。
+
+#### 创新是引领发展的第一动力
+
+![image-20210108110817408](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108110817408.png)
+
+#### 协调是持续健康发展的内在要求
+
+![image-20210108111410274](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108111410274.png)
+
+#### 绿色是永续发展的必要条件
+
+#### 开放是国家繁荣发展的必由之路
+
+> 基本国策：对外开放、一国两制、节约资源、保护环境、男女平等（思修）
+
+![image-20210108112052200](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108112052200.png)
+
+![image-20210108112724897](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108112724897.png)
+
+#### 共享是中国特色社会主义的本质要求
+
+![image-20210108113457840](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108113457840.png)
+
+### 2.深化供给侧结构性改革
+
+> 需求：①消费；②投资；③出口 短期、总量
+>
+> 供给：长期、结构
+
+![image-20210108132755598](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108132755598.png)
+
+### 3. 建设现代化经济体系及其主要任务
+
+#### 3.1 现代化经济体系的构成
+
+#### 3.2 建设现代化经济体系的主要任务
+
+![image-20210108135126306](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108135126306.png)
+
+![image-20210108151309962](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108151309962.png)
+
+![image-20210108151428274](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108151428274.png)
+
+![image-20210108152016951](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108152016951.png)
+
+#### 3.3 实施乡村振兴战略
+
+![image-20210108152639563](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108152639563.png)
+
+实施乡村振兴战略的目标要求：
+
+![image-20210108152734702](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108152734702.png)
+
+乡村振兴战略的具体措施：
+
+> 巩固和完善**农村基本经营制度**，是基石
+
+![image-20210108154046847](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108154046847.png)
+
+#### 3.4 坚持和完善社会主义基本经济制度
+
+（新说法）党19届4中全会提出：公有制为主体、多种所有制经济共同发展，按劳分配为主体、多种分配方式并存，社会主义市场经济体制等社会主义基本经济制度，….
+
+> 注意：此处的“主体”语境，与“公有制为主体”语境不同
+>
+> ![image-20210108155443243](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108155443243.png)
+
+#### 3.5 处理好政府和市场的关系
+
+经济体制改革是全面深化改革的重点，其核心问题是处理好政府与市场的关系，使市场在资源配置中起**决定性**作用和更好发挥政府作用。
+
++ 市场的作用：市场配置资源是最**有效率**的形式
+
++ 政府的作用：
+
+  ![image-20210108160241399](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108160241399.png)
+
+## 政治板块
+
+### 1.坚持中国特色社会主义政治发展道路
+
+走中国特色社会主义政治发展道路，必须坚持党的领导、人民当家作主、依法治国有机统一。
+
+党的领导，是人民当家作主和依法治国的**根本保证**。
+
+人民当家作主，是社会主义民主政治的**本质特征**。
+
+依法治国，是党领导人民治理国家的**基本方式**。
+
+三者统一于我国社会主义民主政治伟大实践。
+
+### 2.健全人民当家作主制度体系 :exclamation:
+
+#### 2.1 国体（*国家是谁的？*）：人民民主专政
+
+> 本质：无产阶级专政
+
+我国是工人阶级领导的、以工农联盟为基础的人民民主专政的社会主义国家，国家一切权力属于人民。
+
+#### 2.2 政体（*采取什么方式管理国家*）：人民代表大会制度
+
+性质（*如何认识….；为什么人大制度是….*）：
+
+![image-20210108163038716](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108163038716.png)
+
+措施：
+
+> “一府”：政府
+>
+> “一委”：监察委员会
+>
+> “两院”：法院和检察院
+
+#### 2.3 **基本**政治制度
+
+1. 中国共产党领导的多党合作和政治协商制度（简称“政协制度”）
+
+   “16字方针”：贯彻长期共存、互相监督、肝胆相照、荣辱与共的方针
+
+   总体要求：以新时代中国特色社会主义思想为指导，增强“四个意识”（政治、核心、大局、看齐）、坚定“四个自信”（理论、道路、制度、**文化**）、做到“两个维护”（习、中央）
+
+   主轴，工作主线，中心环节，主题
+
+2. 民族区域自治制度
+
+   ![image-20210108165245503](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108165245503.png)
+
+   打牢**中华民族共同体**思想基础（祖国统一的基础、民族团结必要条件、伟大复兴的重要条件）
+
+3. 基层群众自治制度
+
+   > 基层群众自治制度，是**直接民主**
+
+   基层自治组织：农村村民委员会、城市居民委员会、企业职工代表大会
+
+   职能：自我管理、自我服务、自我教育、自我监督  
+
+#### 2.4 发挥社会主义协商民主的重要作用
+
+![image-20210108185907711](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108185907711.png)
+
+社会主义协商民主的重要性：协商民主是中国社会主义民主政治的**特有形式**和**独特优势**。
+
+### 3.巩固和发展爱国统一战线
+
+![image-20210108191756628](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108191756628.png)
+
+### 4.坚持“一国两制”，推进祖国统一 :star:
+
+#### 4.1 全面准确贯彻“一国两制”方针
+
+“一国两制”是一个完整的概念。“一国”是实行“两制”的基础，“两制”从属和
+派生于“一国”，并统一于“一国”之中。“一国”是根，根深才能叶茂；“一国”是本，
+本固才能枝荣。要把坚持“一国”原则和尊重“两制”差异、维护中央权力和保障香港特别
+行政区高度自治权、发挥祖国内地坚强后盾作用和提高香港自身竞争力有机结合起来，任何
+时候都不能偏废。只有这样，“一国两制”这艘航船才能劈波斩浪、行稳致远。
+
+#### 4.2 扎实推进祖国和平统一进程
+
+解决台湾问题、实现祖国完全统一，是中华民族根本利益所在，是新时代中国共产党、中国政府的三大历史任务之一。
+
+> 三大历史任务（不是历史使命！）：1.祖国统一；2.社会主义现代化；3.世界和平
+
+共同的政治基础：坚持“九二共识”、反对“台独”
+
