--- a/_posts/2020-12-30-汇编语言学习记录03.md
+++ b/_posts/2020-12-30-汇编语言学习记录03.md
@@ -34,7 +34,7 @@ math: true
 
 + 对于十进制输出，可以将原来得到的乘积结果不断地除10运算。将得到的余数存放到堆栈，将得到的商继续地进行除10运算。直到商为0时，再从堆栈中`pop`出之前存放的所有余数，由此便能够得到对应数字的十进制表示。
 
-```armasm
+```nasm
 datasg segment
     outstr1 db 0dh,0ah,'please input the first number(0-99):',0dh,0ah,'$'
     outstr2 db 0dh,0ah,'please input the second number(0-99):',0dh,0ah,'$'
