--- a/_posts/2020-09-07-CCF-CSP认证-C++题解目录.md
+++ b/_posts/2020-09-07-CCF-CSP认证-C++题解目录.md
@@ -12,7 +12,7 @@ math: true
 | -------- | ------------------------------------------------------------ | ------------------ |
 | 202006-1 | [线性分类器](http://118.190.20.162/view.page?gpid=T105) \| 题解 | 线性规划           |
 | 202006-2 | [稀疏向量 ](http://118.190.20.162/view.page?gpid=T104)\| 题解 | 归并排序思想       |
-| 202006-3 | [化学方程式](http://118.190.20.162/view.page?gpid=T98) \| 题解 :star: | 大模拟、常用STL    |
+| 202006-3 | [化学方程式](http://118.190.20.162/view.page?gpid=T98) \| 题解 ⭐ | 大模拟、常用STL    |
 | 201912-1 | [报数](http://118.190.20.162/view.page?gpid=T100)\| 题解     |                    |
 | 201912-2 | [回收站选址](http://118.190.20.162/view.page?gpid=T99)\| 题解 | 常用STL            |
 | 201909-1 | [小明种苹果](http://118.190.20.162/view.page?gpid=T94)\| 题解 |                    |
@@ -20,18 +20,18 @@ math: true
 | 201903-1 | [小中大](http://118.190.20.162/view.page?gpid=T89)\| 题解    |                    |
 | 201903-2 | [二十四点](http://118.190.20.162/view.page?gpid=T88)\|题解   | 队列、四则表达式   |
 | 201812-1 | [小明上学](http://118.190.20.162/view.page?gpid=T80) \| 题解 |                    |
-| 201812-2 | [小明放学](http://118.190.20.162/view.page?gpid=T81) \| 题解 :star: | 模拟、周期变化     |
+| 201812-2 | [小明放学](http://118.190.20.162/view.page?gpid=T81) \| 题解 ⭐ | 模拟、周期变化     |
 | 201812-4 | [数据中心](http://118.190.20.162/view.page?gpid=T83)         | 最小生成树         |
 | 201809-1 | [卖菜](http://118.190.20.162/view.page?gpid=T79) \| 题解     |                    |
-| 201809-2 | [买菜](http://118.190.20.162/view.page?gpid=T78) \| 题解 :star: | 区间重叠、暴力枚举 |
-| 201803-2 | [碰撞的小球](http://118.190.20.162/view.page?gpid=T72) \| 题解 :star: | 模拟、哈希表       |
+| 201809-2 | [买菜](http://118.190.20.162/view.page?gpid=T78) \| 题解 ⭐ | 区间重叠、暴力枚举 |
+| 201803-2 | [碰撞的小球](http://118.190.20.162/view.page?gpid=T72) \| 题解 ⭐ | 模拟、哈希表       |
 | 201712-2 | [游戏](http://118.190.20.162/view.page?gpid=T67) \| 题解     | 模拟               |
 | 201709-1 | [打酱油](http://118.190.20.162/view.page?gpid=T63) \| 题解   |                    |
 | 201709-4 | [通信网络](http://118.190.20.162/view.page?gpid=T60) \| 题解 | 深搜               |
 | 201703-4 | [地铁修建](http://118.190.20.162/view.page?gpid=T54) \| 题解 | 最小生成树         |
 | 201609-4 | [交通规划](http://118.190.20.162/view.page?gpid=T44) \| 题解 | 单源最短路径       |
-| 201604-4 | [游戏](http://118.190.20.162/view.page?gpid=T39) \| 题解 :star: | 广搜               |
-| 201512-4 | [送货](http://118.190.20.162/view.page?gpid=T34) \| 题解 :star: | 欧拉通路           |
+| 201604-4 | [游戏](http://118.190.20.162/view.page?gpid=T39) \| 题解 ⭐ | 广搜               |
+| 201512-4 | [送货](http://118.190.20.162/view.page?gpid=T34) \| 题解 ⭐ | 欧拉通路           |
 | 201509-2 | [日期计算](http://118.190.20.162/view.page?gpid=T31) \| 题解 |                    |
 
 待做
