--- a/_posts/2020-11-25-Linux文件系统、文件基本属性、目录处理及文件查看.md
+++ b/_posts/2020-11-25-Linux文件系统、文件基本属性、目录处理及文件查看.md
@@ -292,7 +292,7 @@ $ ls -li # -i 参数显示文件的inode节点信息
   #递归地查找目录/etc/acpi及其子目录（如果存在）下所有 文件 中包含字符串"update"的文件，并打印出该字符串所在行的内容
   ```
 
-+ :star:**`find`：在指定目录下查找**（查找对应的文件）
++ ⭐**`find`：在指定目录下查找**（查找对应的文件）
 
   ```shell
   $ find path -option [ -print ] [ -exec -ok command] {} \;
