--- a/_posts/2020-12-01-Git 学习笔记02丨Git 分支.md
+++ b/_posts/2020-12-01-Git 学习笔记02丨Git 分支.md
@@ -98,7 +98,7 @@ Git 的分支模型的学习，我是通过[Learn Git Branching](https://oschina
 
    > 注意图中的`C1`，在实际程序中是一长串哈希值的简化，你不得不用 `git log` 去 查看提交记录的哈希值。在 Git 操作中只需要提供唯一标识提交记录的前几个字符即可。
 
-   :star: 强制修改分支位置：
+   ⭐ 强制修改分支位置：
 
    ```shell
    $ git branch -f master HEAD
@@ -308,7 +308,7 @@ git fetch origin foo
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/img/Peek 2020-12-01 20-50.gif"/>
 
-### 4. :star:先抓取更新再合并到本地——Git Pull
+### 4. ⭐先抓取更新再合并到本地——Git Pull
 
 当远程分支中有新的提交时，我们如何将这些变化更新到我们的工作当中？肯定是先抓取更新再合并到本地分支，而`Git Pull`正是合并了这两个操作：`git fetch`并`git merge origin/master`
 
@@ -345,7 +345,7 @@ $ git pull origin master:foo
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/img/Peek 2020-12-01 20-18.gif"/>
 
-### 5. :star: 发布你的成果——Git Push
+### 5. ⭐ 发布你的成果——Git Push
 
 `git push` 负责将**你的**变更上传到指定的远程仓库，并在远程仓库上**合并**你的新提交记录。一旦 `git push` 完成, 你的朋友们就可以从这个远程仓库下载你分享的成果了。
 
