--- a/_posts/2020-12-26-汇编语言学习记录02之程序设计技巧.md
+++ b/_posts/2020-12-26-汇编语言学习记录02之程序设计技巧.md
@@ -187,7 +187,7 @@ codesg ends
 
 + 由于使用 DOS 功能调用的1号功能，输入只能是一个字节大小的字符，同时是以二进制的ASCII码存入 AL 中。故需将 AL 存下 ASCII 码转换为对应的数字。（在下面的第30行代码）
 
-+ :star: 因为一个段最大存储空间是 $64$ KB，**偏移地址故使用 16 位表示**。因此需要用 2 个字节存储单元 （1个字）去储存偏移地址。对于这个地址表而言，要两个字节、两个字节…如此去寻找表中的每个元素。（在下面的第32行代码）
++ ⭐ 因为一个段最大存储空间是 $64$ KB，**偏移地址故使用 16 位表示**。因此需要用 2 个字节存储单元 （1个字）去储存偏移地址。对于这个地址表而言，要两个字节、两个字节…如此去寻找表中的每个元素。（在下面的第32行代码）
 
 （2）代码：
 
