--- a/_posts/2021-01-06-毛中特复习.md
+++ b/_posts/2021-01-06-毛中特复习.md
@@ -53,7 +53,7 @@ math: true
 
 新民主主义革命理论、改造理论、探索理论
 
-## 毛泽东思想活的灵魂 :star:
+## 毛泽东思想活的灵魂 ⭐
 
 1. 提出：党的十一届六中全会，《历史决议》
 
@@ -69,7 +69,7 @@ math: true
 
      坚持中国的事情必须由中国人民自己处理
 
-## 毛泽东思想的历史地位 :star:
+## 毛泽东思想的历史地位 ⭐
 
 1. 马克思主义中国化的第一个**重大理论成果**
 2. 中国革命和建设的**科学指南**
@@ -108,7 +108,7 @@ math: true
 
 《在晋绥干部会议上的讲话》完整表述总路线内容：
 
-:star: 无产阶级（谁领导？）、人民大众的（革命动力），反对**帝国主义**、封建主义（经济现代化、政治民主化的主要障碍）和官僚资本主义的革命（革命对象）
+⭐ 无产阶级（谁领导？）、人民大众的（革命动力），反对**帝国主义**、封建主义（经济现代化、政治民主化的主要障碍）和官僚资本主义的革命（革命对象）
 
 其中，新民主主义革命的动力——人民大众，包括工、农、小资、民资
 
@@ -144,7 +144,7 @@ math: true
 
 > 注意区别，社会主义时期，国体发生变化——人民民主专政
 
-**经济纲领：**:star:
+**经济纲领：**⭐
 
 ①没收 封建**地主**阶级 的土地归农民所有；（主要内容）
 
@@ -162,23 +162,23 @@ math: true
 
 
 
-农村包围城市、武装夺取政权道路的**依据（必然性、必要性）**：:star:
+农村包围城市、武装夺取政权道路的**依据（必然性、必要性）**：⭐
 ![image-20210106215324380](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210106215757742.png)
 
 > 谈根本原因，优先选择 国情
 
-中国走农村包围城市、武装夺取政权的道路的**现实可能性**：:star:
+中国走农村包围城市、武装夺取政权的道路的**现实可能性**：⭐
 
 ![image-20210106215757742](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210106215757742.png)
 
-中国革命走农村包围城市、武装夺取政权的道路，必须处理好土地革命、武装斗争、农村革命根据地建设三者间关系：:star:
+中国革命走农村包围城市、武装夺取政权的道路，必须处理好土地革命、武装斗争、农村革命根据地建设三者间关系：⭐
 
 + 土地革命 是 民主革命的**基本内容**。
 + 武装斗争 是 中国革命的**主要形式**，是农村根据地建设和土地革命的强有力保证。
 + 农村革命根据地 是 中国革命的战略阵地，是进行武装斗争和开展土地革命的**依托**。
 + 在党的领导下，实现了土地革命、武装斗争、农村革命根据地建设三者的密切结合和有机统一
 
-## 新民主主义革命的三大法宝 （总经验）:star:
+## 新民主主义革命的三大法宝 （总经验）⭐
 
 毛《共产党人发刊词》
 
@@ -270,7 +270,7 @@ math: true
 
 ![](C:\Users\luffy\OneDrive - PursuitMyDreams\博客文章\2021-01-06-毛中特复习.assets\image-202101071232323.png)
 
-## 社会主义改造的历史经验 :star:
+## 社会主义改造的历史经验 ⭐
 
 1. 坚持社会主义工业化建设与社会主义改造同时并举
 
@@ -280,7 +280,7 @@ math: true
 
 3. 用和平方法进行改造
 
-## 确立社会主义基本制度的重大意义 :star: (徐涛06)
+## 确立社会主义基本制度的重大意义 ⭐ (徐涛06)
 
 1. 极大地提高了工人阶级和广大劳动人民的积极性和创造性，极大地促进了我国社会生产力的发展。
 2. 使广大**劳动**人民真正成为国家的主人
@@ -329,13 +329,13 @@ math: true
 
 
 
-## 社会主义建设道路初步探索的意义 :star:
+## 社会主义建设道路初步探索的意义 ⭐
 
 1. 巩固和发展了我国的社会主义制度
 2. 为开创中国特色社会主义提供了宝贵经验、理论准备、物质基础
 3. 丰富了科学社会主义的理论和实践
 
-## 社会主义建设道路初步探索的经验教训 :star:
+## 社会主义建设道路初步探索的经验教训 ⭐
 
 1. 必须把马克思主义与中国实际**相结合**，探索符合中国特点的社会主义建设道路；
 
@@ -443,7 +443,7 @@ math: true
 
 13大，明确指出，社会主义初级阶段，就是指我国在**生产力落后、商品经济不发达**的条件下建设….
 
-社会主义初级阶段的论断包括的两层含义：:star:
+社会主义初级阶段的论断包括的两层含义：⭐
 
 1. 我国已经进入社会主义社会，必须坚持而不能离开社会主义（定性）
 2. 我国的社会主义社会还处在不发达的阶段，必须正视而不能超越初级阶段（定量）
@@ -568,7 +568,7 @@ math: true
 
 二、建立社会主义市场经济体制
 
-三、**全面建设小康社会**（小三步）:star:
+三、**全面建设小康社会**（小三步）⭐
 
 党的15大报告中初步勾画实现第三步战略目标的蓝图：
 
@@ -596,14 +596,14 @@ math: true
 
 五、推进党的建设新的伟大工程
 
-## “三大代表”重要思想的历史地位 :star:
+## “三大代表”重要思想的历史地位 ⭐
 
 1. 中国特色社会主义理论体系的**接续发展**
 2. 加强和改进党的建设，推进中国特色社会主义事业的**强大理论武器**
 
 总之，“三个代表”重要思想进一步回答了什么是社会主义、怎样建设社会主义的问题，创造性地回答了建设什么样的党、怎样建设党的问题，集中起来就是深化了对中国特色社会主义发展规律的认识。“三个代表”重要思想是加强和改进党的建设、推进我国社会主义自我完善和发展的强大理论武器，是党和国家必须长期坚持的指导思想。
 
-## 科学发展观的科学内涵 :star:
+## 科学发展观的科学内涵 ⭐
 
 科学发展观，第一要义是发展，核心立场是以人为本，基本要求是全面协调可持续，根本方法是统筹兼顾。
 
@@ -611,14 +611,14 @@ math: true
 
 ![image-20210107210355507](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107210355507.png)
 
-## 科学发展观的重要意义（历史地位）:star:
+## 科学发展观的重要意义（历史地位）⭐
 
 1. 中国特色社会主义理论体系的接续发展
 2. 发展中国特色社会主义必须长期坚持的指导思想
 
 # Chap8
 
-## 新时代的内涵 :star:
+## 新时代的内涵 ⭐
 
 > 这是我国发展新的历史方位，但不是历史阶段（仍是社初阶段）。
 
@@ -635,7 +635,7 @@ math: true
 第五是我国
 日益走近世界舞台中央、不断为人类作出更大贡献的时代。
 
-## 新时代的意义 :star:
+## 新时代的意义 ⭐
 
 1. 意味着迎来了实现**中华民族伟大复兴**的光明前景；
 
@@ -672,7 +672,7 @@ math: true
 并将长期处于社会主义初级阶段的**基本国情**没有变，我国是世界最大发展中国家的**国际地位**
 没有变。（*但不代表我国在社会上发挥的作用没有变*）
 
-## 习近平新时代中国特色社会主义思想的主要内容 :star:
+## 习近平新时代中国特色社会主义思想的主要内容 ⭐
 
 **坚持和发展**中国特色社会主义，是改革开放以来我们党全部理论和实践的鲜明主题，也是习近平新时代中国特色社会主义思想的**核心要义**。
 
@@ -733,7 +733,7 @@ math: true
 
 人民幸福，是国家富强、民族振兴的题中之义和必然要求，根本出发点和落脚点
 
-### 中国梦的实现 :star:
+### 中国梦的实现 ⭐
 
 1. 实现中国梦必须走中国道路，这就是中国特色社会主义道路。
 2. 实现中国梦必须弘扬中国精神，这就是以爱国主义为核心的民族精神和以改革创新为核心的时代精神。
@@ -781,7 +781,7 @@ math: true
 
 ### 1.贯彻新发展理念
 
-#### 是什么？:star:
+#### 是什么？⭐
 
 **创新**、协调、绿色、开放、共享的发展理念，相互贯通、相互促进，是具有内在联系的集合体。创新注重的是解决发展动力问题，协调注重的是解决发展不平衡问题，绿色注重的是解决人与自然和谐问题，开放注重的是解决发展内外联动问题，共享注重的是解决社会公平正义问题。
 
@@ -931,7 +931,7 @@ math: true
 
 ![image-20210108191756628](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210108191756628.png)
 
-### 4.坚持“一国两制”，推进祖国统一 :star:
+### 4.坚持“一国两制”，推进祖国统一 ⭐
 
 #### 4.1 全面准确贯彻“一国两制”方针
 
