--- a/_posts/人文社科/2021-01-06-毛中特复习.md
+++ b/_posts/人文社科/2021-01-06-毛中特复习.md
@@ -1,8 +1,8 @@
 ---
 title: 毛中特复习
 author: JoyDee
-categories: [人文素养, 马克思主义]
-tags: [人文]
+categories: [人文社科, 马克思主义]
+tags: [毛泽东思想, 中国特色社会主义理论体系]
 math: true
 ---
 
