--- a/_posts/程序设计语言/Assembly/2020-11-14-汇编语言学习记录01丨开发工具安装及编译运行第一个程序.md
+++ b/_posts/程序设计语言/Assembly/2020-11-14-汇编语言学习记录01丨开发工具安装及编译运行第一个程序.md
@@ -1,5 +1,5 @@
 ---
-title: 汇编语言学习记录01之开发工具安装及编译运行第一个程序
+title: 「汇编学习记录01」开发工具安装及编译运行第一个程序
 author: JoyDee
 categories: [程序设计语言, 汇编语言]
 tags: [汇编语言]
