--- a/_posts/随笔杂谈与感悟/2020-11-08-15thCSUST-ACM.md
+++ b/_posts/随笔杂谈与感悟/2020-11-08-15thCSUST-ACM.md
@@ -4,6 +4,7 @@ author: JoyDee
 categories: [随笔杂谈与感悟, 比赛经历]
 date: 2020-11-08 01:42:00 +0800
 tags: [感悟, 杂谈]
+math: true
 ---
 
 这算是我的第一次较正式的$ACM$团队比赛吧，真的感谢@[dj](https://me.csdn.net/daydreamer23333)、@[qc](https://me.csdn.net/qcccc_)两位大佬。:smile:
