--- a/_posts/OnlineJudge/牛客竞赛/2020-09-27-牛客小白月赛28.md
+++ b/_posts/OnlineJudge/牛客竞赛/2020-09-27-牛客小白月赛28.md
@@ -107,7 +107,7 @@ for (int i = 1; i <= 45; i++) {
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20200927002433.png"/>
 
 该表格对$3\times 3$矩阵分形，预先处理$3\times 3$矩阵后，判断询问点在该矩阵位置即可。
-
+{% raw %}
 ```c++
 #include <algorithm>
 #include <cstdio>
@@ -138,7 +138,7 @@ int main() {
     }
 }
 ```
-
+{% endraw %}
 
 
 # C.单词记忆方法 #递归 #分治
