--- a/_posts/OnlineJudge/牛客竞赛/2020-09-27-牛客小白月赛28.md
+++ b/_posts/OnlineJudge/牛客竞赛/2020-09-27-牛客小白月赛28.md
@@ -107,7 +107,6 @@ for (int i = 1; i <= 45; i++) {
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20200927002433.png"/>
 
 该表格对$3\times 3$矩阵分形，预先处理$3\times 3$矩阵后，判断询问点在该矩阵位置即可。
-{% raw %}
 ```c++
 #include <algorithm>
 #include <cstdio>
@@ -127,7 +126,9 @@ const int MOD = 1e9 + 7;
 const int MAXN = 55;
 string str;
 bool vis[MAXN][MAXN];
-bool ans[4][4] = {{0, 1, 1}, {1, 0, 1}, {1, 1, 0}};
+bool ans[4][4] = { 
+    {0, 1, 1}, {1, 0, 1}, {1, 1, 0}
+};
 int main() {
     int q;
     scanf("%d", &q);
@@ -138,7 +139,6 @@ int main() {
     }
 }
 ```
-{% endraw %}
 
 
 # C.单词记忆方法 #递归 #分治
