--- a/_posts/OnlineJudge/LeetCode/2020-09-21-LeetCode周赛207.md
+++ b/_posts/OnlineJudge/LeetCode/2020-09-21-LeetCode周赛207.md
@@ -189,7 +189,7 @@ public:
 
 2. 选择右侧中未被连接的**若干个**点，进行连接。（保证所有右侧点均被左侧点相连）如上图中的顶点`2`。此处要连接的数量，一时无法确定下来，故需要枚举，也就说枚举当前未连接点状态的子集，我们不妨将这状态反转（未连接的表示`1`，与上面不同，这样是便于与上一状态进行合并，按位或操作取并集），比如当前状态`00111`说明，右侧`3,4,5`点未被左侧点连接，那么该状态子集为`00001`,`00010`,`00011`,….。
 
-   [**位运算枚举子集的方法**]：参考自[@lucifer1004的笔记]([https://cp-wiki.vercel.app/basic/enumerate/#%E6%9E%9A%E4%B8%BE%E5%AD%90%E9%9B%86](https://cp-wiki.vercel.app/basic/enumerate/#枚举子集))
+   [**位运算枚举子集的方法**]：参考自[@lucifer1004的笔记](https://cp-wiki.vercel.app/basic/enumerate/#%E6%9E%9A%E4%B8%BE%E5%AD%90%E9%9B%86)
 
    模板即为
 
