--- a/_posts/其他知识技术分享/2020-12-01-网络教学平台ppt.md
+++ b/_posts/其他知识技术分享/2020-12-01-网络教学平台ppt.md
@@ -1,7 +1,7 @@
 ---
 title: 十分钟内将网络教学平台的ppt或pdf“扒”下来
 author: JoyDee
-categories: [其他知识技术分享, others]
+categories: [其他知识技术分享, Others]
 date: 2020-12-01 00:20:00 +0800
 ---
 
