--- a/_posts/随笔杂谈与感悟/2020-08-01-我的第一篇博客.md
+++ b/_posts/随笔杂谈与感悟/2020-08-01-我的第一篇博客.md
@@ -1,7 +1,7 @@
 ---
 title: 我的第一篇博客
 author: JoyDee
-categories: [随笔杂谈与感悟, others]
+categories: [随笔杂谈与感悟, 感悟]
 date: 2020-08-01 21:41:00 +0800
 tags: [感悟, 杂谈]
 math: true
