--- a/_posts/Java/JavaSE/2020-11-21-网络.md
+++ b/_posts/Java/JavaSE/2020-11-21-网络.md
@@ -9,6 +9,8 @@ math: true
 
 # Chapter 14. 网络编程
 
+网络编程，即使用编程语言实现多台计算机的通信。
+
 ## 14.1 计算机网络入门
 
 当前节的知识点只是一个概述，更具体、详细的内容放在 计算机网络 中。
@@ -24,7 +26,7 @@ math: true
 
 + 网络通信协议：只有遵守这些规则，计算机之间才能进行通信。协议中对数据的传输格式、传输速率、传输步骤等做了统一规定，通信双方必须同时遵守，最终完成数据交换。
 
-+ **TCP/IP协议**：传输控制协议/因特网互联协议（Transmission Control Protocol / Internet Protocol），是Internet最基本、最广泛的协议，它定义了计算机如何连入因特网，以及数据如何在它们之间传输的标准。它的内部包含一系列用于处理数据通信的协议，并采用了4层的分层模型，每一层都呼叫它的下一层所提供的协议来完成自己的需求。
++ **TCP/IP**（ TCP/IP 协议**族** 的简称）：传输控制协议/网际协议（Transmission Control Protocol / Internet Protocol），是网络通信模型，以及整个网络传输协议家族，为网际网络的基础通信架构。它将软件通信过程抽象化为**四个抽象层**，采取协议堆栈的方式，分别实现出不同通信协议。该协议家族的两个核心协议、最具代表性的协议为：**TCP**（传输控制协议）和**IP**（网际协议）。
 
   <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201121201210.png"/>
 
@@ -47,6 +49,8 @@ math: true
 利用**协议**+**IP地址**+**端口号** 三元组，即可标识网络中的进程。而进程间的通信即可利用该标识与其他进程进行交互。
 
 1. **协议**
+   
+   定义通信规则。
 
    > IP地址可以唯一标识网络中的**设备**，端口号可以唯一标识设备中的**进程**（应用程序）。
 
@@ -71,6 +75,8 @@ math: true
    > 1. 80端口：网络端口
    > 2. 数据库：mysql：3306；oracle：1521
    > 3. Tomcat服务器：8080
+
+> 举例：若我要和张三说话，我需要张三的地址来找到他（相当于通过IP找到指定计算机）；接着我要与张三的说话，而他用耳朵听我说话（相当于用特定端口接收）；而我们之间对话的语言，需要做好约定，彼此都能听懂（协议所起的作用）。
 
 ## 14.2 TCP通信程序
 
