modify and beautify the toc

--- a/_posts/人文社科/2021-01-06-毛中特复习.md
+++ b/_posts/人文社科/2021-01-06-毛中特复习.md
@@ -413,7 +413,7 @@ math: true
 
 ## 邓小平理论的主要内容
 
-## 一、解放思想、实事求是的**思想路线**
+### 一、解放思想、实事求是的**思想路线**
 
 其中，思想路线：
 
@@ -429,7 +429,7 @@ math: true
 
 该思想路线，是邓论的**活的灵魂**，邓论的**精髓**。
 
-## 二、社会主义初级阶段理论（国情论）
+### 二、社会主义初级阶段理论（国情论）
 
 13大前夕，邓的论述，将“社初”作为事关全局的国情加以把握
 
@@ -448,7 +448,7 @@ math: true
 1. 我国已经进入社会主义社会，必须坚持而不能离开社会主义（定性）
 2. 我国的社会主义社会还处在不发达的阶段，必须正视而不能超越初级阶段（定量）
 
-## 三、党的基本路线
+### 三、党的基本路线
 
 + 奋斗目标：富强、民主、文明….
 
@@ -472,19 +472,19 @@ math: true
 
 社会主义初级阶段基本路线的意义（重要性）——是党和国家的生命线，人民的幸福线
 
-## 四、社会主义根本任务的理论
+### 四、社会主义根本任务的理论
 
  生产力是社会发展的最根本的决定性因素，社会主体的根本任务是解放生产力，发展生产力
 
 > 中特新时代总任务，一是中华民族伟大复兴，二是社会主义现代化
 
-## 五、“三步走”战略（大三步）
+### 五、“三步走”战略（大三步）
 
 ![image-20210107161240105](https://gitee.com/j__strawhat/MyImages/raw/master/image-20210107161240105.png)
 
 > 在今天（19大），2035年就要基本实现现代化；21中叶，实现现代化强国
 
-## 六、改革开放理论
+### 六、改革开放理论
 
 性质
 
@@ -502,7 +502,7 @@ math: true
 
 改革开放——活力源泉、重要法宝
 
-## 七、社会主义市场经济理论
+### 七、社会主义市场经济理论
 
 我国经济体制改革的**核心**：如何正确认识和处理计划与市场的关系（或政府和市场的关系）
 
@@ -524,15 +524,15 @@ math: true
 
 计划和市场都是经济手段，是体制
 
-## 八、“两手抓，两手都要硬”
+### 八、“两手抓，两手都要硬”
 
-## 九、“一国两制”
+### 九、“一国两制”
 
 它的提出，从解决台湾问题开始的。但它在实践中首先运用于解决香港、澳门问题
 
 台湾问题是国内战争遗留下来，属于中国内政
 
-## 十、中国问题的关键在于党
+### 十、中国问题的关键在于党
 
 
 
